fix(ons-tabbar, ons-navigator): Fix flickering issue on iOS.

--- a/core/css/common.css
+++ b/core/css/common.css
@@ -33,6 +33,7 @@ ons-tabbar {
   left: 0;
   bottom: 0;
   right: 0;
+  overflow: hidden;
 }
 
 ons-page, ons-navigator, ons-tabbar, ons-sliding-menu, ons-split-view {
